service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  selector:
    app: hello-openshift
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
